--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://<mattiasciuto>.github.io/<mattia>",
+"homepage": "https://mattiasciuto.github.io/text-divider",
   "devDependencies": {
     "gh-pages": "^6.2.0"
   }
