Descrizione delle modifiche apportate a package.json

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://mattiasciuto.github.io/text-divider",
+  "homepage": "https://mattiasciuto.github.io/mattiayt",
   "devDependencies": {
     "gh-pages": "^6.2.0"
   }
